centralização vertical de caixas

--- a/ex22/fundo003.html
+++ b/ex22/fundo003.html
@@ -6,29 +6,68 @@
     <title>Document</title>
     <style>
 
-        * {
-            margin: 0px;
-            padding: 0px;
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment:fixed;
+            
         }
 
-        div.coluna {
-            height: 98vh;
-            width: 300px;
-            border: 2px solid black;
+        main {
+            max-width: 400px;
+            min-height: 1000px;
             margin: auto;
-            display:inline-block;
-        }
-
-        div#dir {
-            margin-left: 1250px;
-
+            background-color: aliceblue;
+            border: 1px solid black;
+            border-radius: 10px;
+            padding: 7px;
         }
 
     </style>
 </head>
 <body>
-    <div class="coluna" id="esq"></div>
-    <div class="coluna" id="dir"></div>
-    
+    <main>
+        <h1>Teste de imagem fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel facilis
+        natus possimus. Eum mollitia saepe dignissimos soluta error, iste quia nulla
+        cumque, nesciunt ex vitae voluptatum doloremque rem tenetur.</p>
+    </main>
 </body>
 </html>
