--- a/desafiocordel/index.html
+++ b/desafiocordel/index.html
@@ -10,11 +10,12 @@
     <header>
         <h1>Cordel Moderno</h1>
         
-            <p>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+            <p>Por <a href=" https://www.recantodasletras.com.br/poesias/3186743"
+                target="_blank">Milton Duarte</a></p>
     </header>
 
     <main>
-        <section id="verso1">
+        <section>
             <p>
                 <br>Estou ficando cansado</br>
                 <br>Da tal tecnologia</br>
@@ -42,7 +43,7 @@
 
  
 
-        <section id="verso3">
+        <section>
             <p>
                 <br>Arroba agora não pesa</br>
                 <br>É parte de um endereço</br>
@@ -56,7 +57,7 @@
 
  
 
-        <section id="verso4">
+        <section>
             <p>
                 <br>Pra piorar a liguagem</br>
                 <br>O emoticom é um risco</br>
@@ -84,7 +85,7 @@
 
  
 
-        <section id="verso6">
+        <section>
             <p>
                 <br>Agora, escrevo e envio</br>
                 <br>Chegando na mesma hora</br>
@@ -112,7 +113,8 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/Macedoax"><strong>Alex Macedo</strong></a> para o <a href="https://www.cursoemvideo.com/"><strong>CursoemVideo</strong></a>.</p>
+        <p>Site criado por <a href="https://github.com/Macedoax" target="_blank"><strong>Alex Macedo</strong></a>
+         para o <a href="https://www.cursoemvideo.com/" target="_blank"><strong>CursoemVideo</strong></a>.</p>
     </footer>
     
 </body>
