--- a/ex23/tabela002.html
+++ b/ex23/tabela002.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela Semantica</title>
     <style>
+
+        * {
+            padding: 0px;
+            border: 0px;
+            margin: 0px;
+        }
+
+        header {
+            background-color: white;
+            margin: auto;
+            max-width: 1200px;
+            min-width: 400px;
+            padding: 30px 10px 30px 10px;
+        }
+
+        header > h1 {
+            padding: 10px;
+            text-align: center;
+            background-color: black;
+            color: white;
+            margin: 0px -11px 0px -11px;
+        }
+
+        header > p {
+            text-align: center;
+            padding: 25px 100px 10px 100px;
+
+        }
         body{
             background-color: bisque;
         }
@@ -47,14 +75,17 @@
     </style>
 </head>
 <body>
+    
+        <header>
+            <h1>Tabela com tegs semanticas</h1>
+            <p>
+                As tabelas feitas com as tegs semanticas são mais comuns
+                em tabelas grandes, no entanto, nada impede do método ser
+                usado para a criação de tabelas pequenas. pelo contrário,
+                tegs semanticas facilitam a buscas para o google e melhor
+                ranqueiam o seu site.
+        </header>
     <main>
-        <h1>Tabela com tegs semanticas</h1>
-        <p>
-            As tabelas feitas com as tegs semanticas são mais comuns
-            em tabelas grandes, no entanto, nada impede do método ser
-            usado para a criação de tabelas pequenas. pelo contrário,
-            tegs semanticas facilitam a buscas para o google e melhor
-            ranqueiam o seu site.
         </p>
         <table>
             <caption>População das Unidades Federativas</caption>
